--- a/_posts/2021-10-14-r-installation/r-installation.Rmd
+++ b/_posts/2021-10-14-r-installation/r-installation.Rmd
@@ -182,5 +182,5 @@ remotes::install_github('immunogenomics/harmony')
 remotes::install_github('johannesbjork/LaCroixColoR')
 ```
 
-To test the installation, run the [prerequiste Rmarkdown](...) which will load all of these packages.
+To test the installation, run the [prerequisite Rmarkdown](https://raw.githubusercontent.com/rnabioco/cellar/master/_posts/2021-10-21-prerequisite-material/prerequiste-exercises.Rmd) which will load all of these packages.
 
