--- a/_posts/2021-10-21-interacting-with-r-in-rstudio/interacting-with-r-in-rstudio.Rmd
+++ b/_posts/2021-10-21-interacting-with-r-in-rstudio/interacting-with-r-in-rstudio.Rmd
@@ -24,6 +24,6 @@ knitr::opts_chunk$set(echo = FALSE)
 [Rstudio](https://www.rstudio.com/) is one of the most popular Integrated Development Environments (IDE) for working in R. It provides many useful tools to help conduct, document, and manage your analyses. 
 
 If you are unfamilar with Rstudio, the Rmarkdown format, or setting up projects in Rstudio, please watch a tutorial video ([.mov format](https://www.dropbox.com/s/alrmoszei1ou6vr/intro-to-rstudio.mov?dl=0) 
-, [.mp4 to be added soon]()) (~20 min) to help you get oriented.
+, [.mp4](https://www.dropbox.com/s/zuh153mlp7w2fio/intro-to-rstudio.mp4?dl=0)) (~20 min) to help you get oriented.
 
 
