--- a/_posts/2021-10-14-r-installation/r-installation.Rmd
+++ b/_posts/2021-10-14-r-installation/r-installation.Rmd
@@ -135,7 +135,7 @@ From CRAN:
   - Seurat  
   - rmarkdown  
   - cowplot  
-  - colorblindr  
+  - pheatmap  
   - markdown  
   
                   
@@ -144,7 +144,7 @@ install.packages(c('tidyverse',
                    'rmarkdown',
                    'Seurat',
                    'cowplot',
-                   'colorblindr',
+                   'pheatmap',
                    'markdown'))
 ```
 
