--- a/_posts/2021-10-13-multi-modal/multi-modal.Rmd
+++ b/_posts/2021-10-13-multi-modal/multi-modal.Rmd
@@ -17,7 +17,7 @@ date: 10-13-2021
 output:
   distill::distill_article:
     self_contained: false
-draft: true
+draft: false
 editor_options: 
   chunk_output_type: console
 ---
