--- a/classes.Rmd
+++ b/classes.Rmd
@@ -8,4 +8,5 @@ listing:
     - 2021-10-20-working-with-your-own-single-cell-data
     - 2021-10-21-prerequisite-material
     - 2021-10-21-interacting-with-r-in-rstudio
+    - 2021-10-27-multi-modal
 ---
