--- a/classes.Rmd
+++ b/classes.Rmd
@@ -9,5 +9,6 @@ listing:
     - 2021-10-21-prerequisite-material
     - 2021-10-21-interacting-with-r-in-rstudio
     - 2021-10-27-multi-modal
+    - 2021-11-3-class-2
     - 2021-10-26-class-3
 ---
